<resources>
    
    <string name="ok">是</string>
    <string name="cancel">取消</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">可用量查询</string>
    <string name="toast_connectionErrorText">网络连接错误,请检查网络连接</string>
    <string name="toast_timeoutErrorText">请求超时，确认网络状况良好并请联系服务器管理员</string>
    <string name="toast_serverErrorText">服务器处理请求错误，请联系服务器管理员</string>
    <string name="toast_voError">vo请求或结果处理错误</string>
    <string name="toast_loginSuccessfullyText">登陆成功</string>
    <string name="dialog_loginTitle">登陆</string>
    <string name="dialog_loginText">正在登陆</string>
	
    
    <string name="app_name">可用量查询</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_attentions">关注</string>
    <string name="attention">我的关注</string>
    <string name="search_text">搜索物料</string>
	<string name="history">查看历史</string>
	<string name="material_name">物料名称</string>
	<string name="search_label">搜索物料</string>
	<string name="history_label">查看历史</string>
	<string name="edit_button">编辑</string>
	<string name="search">搜索</string>
	<string name="go_back">返回</string>
</resources>