<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/RelativeLayout0" >
    
    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:paddingTop="0dp"
        android:background="@drawable/common_title_bg" >
        
 		<Button
		    android:id="@+id/go_home1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_marginTop="10px"
		    android:background="@drawable/salary_detail_title_btn_back" /> 
		     
		<Button
		    android:id="@+id/edit_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_marginTop="10px"
		    android:background="@drawable/setconnection_address_right_bg"
		    android:contentDescription="@string/app_name"
		    android:text="@string/edit_button" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:gravity="center"
		    android:text="@string/attention"
		    android:textColor="@color/white"
		    android:textSize="25sp" />

	</RelativeLayout>

	<ListView
	    android:id="@+id/list"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_below="@id/relativelayout" />

</RelativeLayout>

